[build-system]
requires = [
    "setuptools>=43.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "obz"
description = "write your own commands"
version = "7"
authors = [
    {name = "Bart Thate",email = "bthate@dds.nl"},
]
readme = "README.rst"
license = {text="Public Domain"}
classifiers = [ 
    'Development Status :: 3 - Alpha',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Utilities'
]


[project.scripts]
'obz'  = 'obz.main:control'
'obzc' = 'obz.main:console'
'obzd' = 'obz.main:background'
'obzs' = 'obz.main:service'


[project.urls]
"home" = "https://pypi.org/project/obz"
"bugs" = "https://github.com/otpcr/obz/issues"
"source" = "https://github.com/otpcr/obz"


[tool.setuptools]
packages = [
    "obz",
    "obz.modules"
]
