[build-system]
requires = [
    "setuptools>=43.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "obz"
description = "program your own commands"
version = "7"
authors = [
    {name = "OTP-CR-117/19", email = "record11719@gmail.com"},
]
readme = "README.rst"
license = {text="Public Domain"}
classifiers = [ 
    'Development Status :: 3 - Alpha',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Utilities'
]


[project.scripts]
"obz" = "obz.__main__:wrapped"

[project.urls]
"home" = "https://pypi.org/project/obz"
"bugs" = "https://github.com/otpcr/obz/issues"
"source" = "https://github.com/otpcr/obz"


[tool.setuptools]
packages = [
    "obz",
    "obz.modules"
]
